# cyberthreatml

./: .gitignore  .replit  CyberThreat-ML_Research_Paper.html  CyberThreat-ML_Research_Paper.tex  CyberThreat-ML_Research_Paper_Complete.html  CyberThreat-ML_Research_Paper_Downloadable.html  CyberThreat-ML_Research_Paper_Draft.md  CyberThreat-ML_Research_Paper_PDF_Ready.md  CyberThreat-ML_Research_Paper_Updated.html  DOCUMENTATION.md  IOT_SECURITY.md  PROJECT_STATUS.md  README.md  README_real_world_testing.md  TECHNICAL_DOCUMENTATION.md  ZERO_DAY_DETECTION.md  convert_research_paper.py  explainability.py  generate_downloadable_pdf.py  model.py  paper_outline.md  performance_comparison.html  pyproject.toml  replit.nix  requirements.txt  run_python_example.sh  setup.py  system_architecture.html  test_env.py  test_model.py  threat_detection_metadata.json  threat_detection_model.keras
attached_assets/: Pasted-To-identify-a-machine-learning-ML-model-library-that-is-in-high-demand-and-solve-a-relevant-proble-1741590451275.txt
cyberthreat_ml/: __init__.py  anomaly.py  evaluation.py  explain.py  interpretability.py  interpreter.py  logger.py  model.py  preprocessing.py  realtime.py  text_visualization.py  utils.py  visualization.py
cyberthreat_ml.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
datasets/: sample_network_data.csv
docs/: ATTACK_DEMO_README.md  CyberML101.md  Documentation_Guide.md  Explainability_Guide.md  FAQ.md  Getting_Started.md  Library_Documentation.md  Project_Status.md  QuickReference.md  QuickStart.md  README.md  Real_World_Testing.md  (+7 more)
(+94 files in other folders)
