[project] 
name = "cyberthreat-ml" 
version = "0.1.0"
description = "A Python library for real-time cybersecurity threat detection using TensorFlow"
authors = [
    {name = "CyberThreat-ML Team", email = "example@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "matplotlib>=3.5.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "seaborn>=0.11.0",
    "shap>=0.40.0",
    "tensorflow>=2.8.0",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cyberthreat_ml"]
